<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:background="@color/purple_200"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent">-->
<!--        <ImageButton-->
<!--            android:background="@color/purple_200"-->
<!--            android:id="@+id/return_to_search"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:src="@drawable/arrow_back"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--        />-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:paddingStart="8dp"-->
<!--            android:textColor="@color/white"-->
<!--            android:paddingEnd="8dp"-->
<!--            android:gravity="center"-->
<!--            android:textSize="20sp"-->
<!--            android:hint="@string/gif"-->
<!--            app:layout_constraintStart_toEndOf="@id/return_to_search"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--        />-->


<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <include
        android:id="@+id/app_toolbar"
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/gif_view"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/app_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/gif"
    />

    <TextView
        android:id="@+id/id_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/id"
        app:layout_constraintStart_toEndOf="@id/gif_view"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toTopOf="parent"
    />

    <EditText
        android:id="@+id/id_value"
        android:layout_width="128dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/id_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:gravity="center_vertical"
        android:hint="@string/id"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/type_label"
        app:layout_constraintStart_toEndOf="@id/gif_view"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/id_label"
        />

    <EditText
        android:id="@+id/type_value"
        android:layout_width="104dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/type_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:gravity="center_vertical"
        android:hint="@string/type_label"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/id_value"
        />
    <TextView
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/rating_label"
        app:layout_constraintStart_toEndOf="@id/gif_view"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/type_label"
        />

    <EditText
        android:id="@+id/rating_value"
        android:layout_width="88dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/rating_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:gravity="center_vertical"
        android:hint="@string/rating_label"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/type_value"
        />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/title_label"
        app:layout_constraintStart_toEndOf="@id/gif_view"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/rating_label"
        />

    <EditText
        android:id="@+id/title_value"
        android:layout_width="104dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/title_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:gravity="center_vertical"
        android:hint="@string/title_label"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/rating_value"
        />

    <TextView
        android:id="@+id/sticker_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/is_sticker_label"
        app:layout_constraintStart_toEndOf="@id/gif_view"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/title_label"
        />

    <EditText
        android:id="@+id/sticker_value"
        android:layout_width="64dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/sticker_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:gravity="center_vertical"
        android:hint="@string/is_sticker_label"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/title_value"
        />

    <TextView
        android:id="@+id/user_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/username_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/gif_view"
        />

    <EditText
        android:id="@+id/user_value"
        android:layout_width="104dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/user_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:gravity="center_vertical"
        android:hint="@string/username_label"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/gif_view"
        />

    <TextView
        android:id="@+id/url_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/url_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/user_label"
        />

    <EditText
        android:id="@+id/url_value"
        android:layout_width="352dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/url_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:autoLink="web"
        android:gravity="center_vertical"
        android:hint="@string/url_example"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/user_label"
        />

    <TextView
        android:id="@+id/source_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/source_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/url_label"
        />

    <EditText
        android:id="@+id/source_value"
        android:layout_width="312dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/source_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:autoLink="web"
        android:gravity="center_vertical"
        android:hint="@string/url_example"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/url_value"
        />

    <TextView
        android:id="@+id/import_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/import_datetime_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/source_label"
        />

    <EditText
        android:id="@+id/import_value"
        android:layout_width="232dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/import_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:gravity="center_vertical"
        android:hint="@string/import_datetime_label"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/source_value"
        />

    <TextView
        android:id="@+id/trending_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/trending_datetime_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical"
        android:textColor="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/import_label"
        />

    <EditText
        android:id="@+id/trending_value"
        android:layout_width="208dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/trending_label"
        android:textColor="?colorOnBackground"
        android:layout_marginHorizontal="8dp"
        android:inputType="none"
        android:gravity="center_vertical"
        android:hint="@string/trending_datetime_label"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/import_value"
        />



</androidx.constraintlayout.widget.ConstraintLayout>